[package]
name = "svtc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to convert SCSS variables into CSS variables"
repository = "https://github.com/DevAles/svtc/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

